Fixed: collapses not working properly game opening in a new site

--- a/style.css
+++ b/style.css
@@ -603,46 +603,3 @@ footer {
     .carousel-btn.prev-btn { left: 0px; }
     .carousel-btn.next-btn { right: 0px; }
 }
-
-.hidden{
-    display: none;
-}
-
-.modal{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.4);
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    z-index: 999;
-}
-
-.modal-content {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    position: relative;
-}
-
-.modal.hidden{
-    display: none;
-}
-
-.close-modal{
-    background: tomato;
-    border-radius: 25px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-
-.close-modal:hover{
-    transform: scale(1.5);
-}
-
